# CoreTaskOptimizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  customize.sh  devenv.nix  module.prop  service.sh  uninstall.sh  update.json
.github/workflows/: android-multi-abi-build.yml  build.yml  builds.yml  checks.yml  release.yml  test.yml
common/: functions.sh  install.sh
libs/arm64-v8a/: task_optimizer
libs/armeabi-v7a/: task_optimizer
libs/x86/: task_optimizer
libs/x86_64/: task_optimizer
src/: main.cpp  task_optimizer.cpp
